# ML-zoomcamp

./: README.md  pyproject.toml
Homeworks/: week-1.ipynb  week-2.ipynb
