[project]
name = "ml-zoomcamp"
version = "0.1.0"
description = "Learning Machine Learning in practice"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib==3.10.6",
    "notebook==7.4.7",
    "numpy==2.3.3",
    "pandas==2.3.3",
    "scikit-learn==1.7.2",
    "seaborn==0.13.2",
]
